Fix sidebar on firefox

--- a/custom/panel_templates/Default/assets/css/custom.css
+++ b/custom/panel_templates/Default/assets/css/custom.css
@@ -311,9 +311,11 @@ i,
 
 .sidebar {
     position: fixed;
+    width: 16vh !important;
     height: 100vh;
     z-index: 999;
-    overflow-y: overlay !important;
+    overflow-y: scroll !important;
+    overflow-x: hidden;
 }
 
 .sidebar::-webkit-scrollbar-track {
